# MoviePilot

./: Dockerfile  pyproject.toml
.github/workflows/: build.yml
app/: monitor.py
app/api/endpoints/: download.py
app/chain/: download.py  subscribe.py  transfer.py
app/core/: config.py
app/db/models/: downloadhistory.py  subscribe.py  transferhistory.py
app/helper/: directory.py
app/modules/transmission/: __init__.py  transmission.py
app/plugins/rsssubscribe/: __init__.py
app/schemas/: history.py  subscribe.py  system.py
database/versions/: f74adc9e2cf4_2_0_8.py
