[project]
name = "app"
version = "2.0.5"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "WithdewHua", email = "i@10101.io" }
]
requires-python = ">=3.11"
dependencies = [
    "aiofiles~=24.1.0",
    "alembic~=1.11.1",
    "aligo~=6.2.4",
    "anitopy~=2.1.1",
    "apscheduler~=3.10.1",
    "bcrypt~=4.0.1",
    "beautifulsoup4~=4.12.2",
    "bs4~=0.0.1",
    "cacheout~=0.14.1",
    "cachetools~=5.3.1",
    "cf-clearance~=0.31.0",
    "chardet~=4.0.0",
    "click~=8.1.6",
    "cn2an~=0.5.19",
    "cryptography~=43.0.0",
    "cython~=3.0.2",
    "dateparser~=1.1.8",
    "docker~=6.1.3",
    "fast-bencode~=1.1.3",
    "fastapi~=0.96.0",
    "func-timeout==4.3.5",
    "jinja2~=3.1.4",
    "lxml~=4.9.2",
    "openai~=0.27.2",
    "parse~=1.19.0",
    "passlib~=1.7.4",
    "pillow~=10.4.0",
    "pinyin2hanzi~=0.1.1",
    "playwright~=1.37.0",
    "plexapi~=4.15.16",
    "psutil~=5.9.4",
    "pycryptodome~=3.20.0",
    "pydantic~=1.10.13",
    "pyjwt~=2.7.0",
    "pyotp~=2.9.0",
    "pyparsing~=3.0.9",
    "pyquery~=2.0.0",
    "pystray~=0.19.5",
    "pytelegrambotapi~=4.12.0",
    "python-115~=0.0.9.8.7",
    "python-dateutil~=2.8.2",
    "python-dotenv~=1.0.1",
    "python-hosts~=1.0.7",
    "python-multipart~=0.0.9",
    "pytz~=2023.3",
    "pyvirtualdisplay~=3.0",
    "pywebpush~=2.0.0",
    "pywin32==306 ; platform_system == 'Windows'",
    "qbittorrent-api==2024.11.69",
    "regex~=2023.6.3",
    "requests-cache~=0.5.2",
    "requests[socks]~=2.32.3",
    "ruamel-yaml~=0.17.31",
    "slack-bolt~=1.18.0",
    "slack-sdk~=3.21.3",
    "sqlalchemy~=2.0.15",
    "starlette~=0.27.0",
    "torrentool~=1.2.0",
    "transmission-rpc~=4.3.0",
    "urllib3~=2.2.2",
    "uvicorn~=0.22.0",
    "watchdog~=3.0.0",
    "zhconv~=1.4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]